--- a/packages/react-icons/package.json
+++ b/packages/react-icons/package.json
@@ -48,6 +48,7 @@
     "p-queue": "^7.3.0",
     "prettier": "^2.7.1",
     "svgo": "^3.0.3",
+    "@material-symbols/svg-300": "^0.17.0",
     "typescript": "^4.8.4"
   },
   "scripts": {
